# timeline-studio

./: .deepsource.toml  .env.example  .env.local.example  .env.production  .eslintcache  .eslintrc.js  .gitignore  .npmrc  .stylelintignore  .stylelintrc.json  AGENT.md  CHANGELOG.md  CI_SETUP.md  CLAUDE.md  CODECOV_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_PLAN.md  DEEPSOURCE.md  DEV.md  LICENSE  LOCALIZATION_ISSUE.md  ORT_BUILD_ISSUE.md  PLAN.md  README.ar.md  README.de.md  README.es.md  README.fa.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.th.md  README.tr.md  README.zh.md  ROADMAP.md  (+26 more)
src-tauri/: .clippy.toml  .gitignore  ARCHITECTURE.md  BACKEND_IMPROVEMENTS_SUMMARY.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_PROGRESS.md  Cargo.toml  DEPENDENCY_UPDATE_PLAN.md  DEV.md  DEVELOPMENT_BEST_PRACTICES.md  DOCUMENTATION_UPDATE_REPORT.md  ERROR_HANDLING.md  KNOWN_ISSUES.md  MODULE_MAP.md  MONITORING_IMPLEMENTATION.md  PREVIEW_CLEANUP.md  README.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_STATUS.md  build.rs  build_rs_cov.profraw  coverage.info  tarpaulin.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: asset.json  camera.json  default.json  desktop.json  filesystem.json  fs.json  http.json  main.json
src-tauri/coverage/: cobertura.xml  lcov.info  tarpaulin-report.html
src-tauri/docs/: architecture.md  service-layer.md  testing-guide.md
src-tauri/examples/: di_container_example.rs  event_system_example.rs  phase2_integration_demo.rs  plugin_system_demo.rs  telemetry_demo.rs  zerocopy_demo.rs
src-tauri/examples/plugins/: blur_effect_plugin.rs  youtube_uploader_plugin.rs
src-tauri/src/: app_builder.rs  app_dirs.rs  command_registry.rs  command_registry_tests.rs  filesystem.rs  language.rs  language_tauri.rs  lib.rs  lib_backup.rs  lib_backup_full.rs  main.rs  media.rs  specta_export.rs
src-tauri/src/core/: README.md  di.rs  events.rs  mod.rs  test_utils.rs
src-tauri/src/core/performance/: README.md  cache.rs  memory.rs  mod.rs  runtime.rs  zerocopy.rs
src-tauri/src/core/plugins/: README.md  api.rs  api_factory.rs  commands.rs  context.rs  integration_tests.rs  integration_tests_real_services.rs  loader.rs  manager.rs  mod.rs  permissions.rs  plugin.rs  sandbox.rs
src-tauri/src/core/telemetry/: README.md  config.rs  health.rs  metrics.rs  middleware.rs  mod.rs  tracer.rs
src-tauri/src/media/: PROCESSOR_README.md  README.md  additional_commands.rs  commands.rs  ffmpeg.rs  file_scanner.rs  files.rs  media_analyzer.rs  metadata.rs  metadata_extractor.rs  mod.rs  performance_limits.rs  preview_data.rs  preview_manager.rs  processor.rs  processor_refactored.rs  processor_test.rs  real_data_tests.rs  registry.rs  test_data.rs  test_ffmpeg_mock.rs  test_plan.md  tests.rs  thumbnail.rs  thumbnail_generator.rs  types.rs
src-tauri/src/media/metadata/: tests.rs
src-tauri/src/montage_planner/: commands.rs  mod.rs  types.rs
src-tauri/src/montage_planner/services/: activity_calculator.rs  audio_analyzer.rs  composition_analyzer.rs  emotion_detector.rs  mod.rs  moment_detector.rs  plan_generator.rs  quality_analyzer.rs  video_processor.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/examples/: blur_effect_simple.rs  mod.rs  youtube_uploader_simple.rs
src-tauri/src/recognition/: README.md  commands.rs  commands_test.rs  frame_processor.rs  mod.rs  model_manager.rs  real_data_tests.rs  real_data_tests.rs.bak  recognition_service.rs  registry.rs  registry.rs.backup  result_aggregator.rs  tests.rs  types.rs  yolo_processor.rs  yolo_processor_refactored.rs
src-tauri/src/recognition/commands/: mod.rs  yolo_commands.rs
src-tauri/src/security/: additional_commands.rs  api_validator.rs  api_validator_service.rs  api_validator_service_tests.rs  api_validator_tests.rs  commands.rs  commands_test.rs  env_importer.rs  env_importer_test.rs  mod.rs  oauth_handler.rs  oauth_handler_simple_tests.rs  oauth_handler_tests.rs  registry.rs  secure_storage.rs  secure_storage_tests.rs  tests.rs
src-tauri/src/subtitles/: commands.rs  mod.rs  tests.rs
src-tauri/src/video_compiler/: README.md  VIDEO_COMPILER_README.md  cache.rs  commands.rs  commands_logic.rs  commands_tests.rs  error.rs  error_tests.rs  ffmpeg_builder.rs  ffmpeg_executor.rs  frame_extraction.rs  frame_extraction_tests.rs  gpu.rs  mod.rs  pipeline.rs  pipeline_edge_cases.rs  pipeline_extended_tests.rs  preview.rs  progress.rs  progress_tests.rs  registry.rs  renderer.rs  schema.rs  test_integration.rs
src-tauri/src/video_compiler/benchmarks/: ffmpeg_benchmarks.rs  mod.rs
src-tauri/src/video_compiler/cache/: tests.rs
src-tauri/src/video_compiler/commands/: advanced_metrics.rs  advanced_metrics_tests.rs  batch_commands.rs  cache.rs  compiler_settings_commands.rs  ffmpeg_advanced.rs  ffmpeg_builder_advanced_commands.rs  ffmpeg_builder_commands.rs  ffmpeg_builder_extra_commands.rs  ffmpeg_executor_commands.rs  ffmpeg_utilities_commands.rs  final_utilities_commands.rs  frame_extraction_advanced_commands.rs  frame_extraction_commands.rs  frame_extraction_commands_tests.rs  frame_manager_commands.rs  gpu.rs  info.rs  metrics.rs  metrics_advanced_commands.rs  misc.rs  mod.rs  monitoring_commands.rs  multimodal_commands.rs  pipeline_advanced_commands.rs  pipeline_commands.rs  platform_optimization_commands.rs  prerender_commands.rs  preview.rs  preview_advanced_commands.rs  progress_tracker_commands.rs  project.rs  project_schema_commands.rs  recognition_advanced_commands.rs  remaining_utilities_commands.rs  rendering.rs  schema_commands.rs  security_advanced_commands.rs  service_commands.rs  service_container_commands.rs  (+11 more)
src-tauri/src/video_compiler/core/: cache.rs  constants.rs  error.rs  frame_extraction.rs  gpu.rs  mod.rs  pipeline.rs  pipeline_refactored.rs  preview.rs  progress.rs  renderer.rs
src-tauri/src/video_server/: mod.rs  server.rs  tests.rs
src-tauri/target-tarpaulin/: .rustc_info.json
src-tauri/tests/: di_tests.rs  telemetry_prometheus_tests.rs
src-tauri/tests/common/: mod.rs
(+4798 files in other folders)
