[package]
name = "timeline-studio"
version = "0.29.0"
description = "A Timeline Studio"
authors = ["Alexander Kireyev <ak.chatman.media@gmail.com>"]
license = "MIT WITH Commons-Clause"
repository = "https://github.com/chatman-media/timeline-studio"
edition = "2021"
default-run = "timeline-studio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "timeline_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "timeline-studio"
path = "src/main.rs"

# Commented out for release builds - uncomment for development type generation
# [[bin]]
# name = "test_specta"
# path = "src/bin/test_specta.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dev-dependencies]
# For test cleanup and initialization
ctor = "0.2"
env_logger = "0.10"
libc = "0.2"
# Test utilities
tempfile = "3.8"
tower = { version = "0.4", features = ["util"] }
urlencoding = "2.0"
reqwest = { version = "0.11", features = ["json"] }
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# HTTP mocking for OAuth tests
httpmock = "0.7"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.6", features = [ "protocol-asset", "devtools"] }
tauri-plugin-opener = "2.2.7"
sys-locale = "0.3.1"
tauri-plugin-websocket = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
# Video Compiler dependencies
ffmpeg-next = "7.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
dashmap = "5.0"
image = "0.24"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
regex = "1.0"
# Safer mutex implementation that avoids destructor issues
parking_lot = "0.12"
async-trait = "0.1"
base64 = "0.22.1"
once_cell = "1.19"
# Video Server dependencies
axum = { version = "0.7", features = ["tokio", "http2"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
md5 = "0.7"
dirs = "5.0"
anyhow = "1.0.98"
# Security and API keys management
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
keyring = "2.3"
# HTTP client for API validation
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
which = "4.4"
# URL handling for OAuth
url = "2.5"
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "load-dynamic"] }
ndarray = "0.15"
# System information dependencies
num_cpus = "1.16"
sysinfo = "0.31"
os_info = "3.8"
# OpenTelemetry dependencies
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.28"
opentelemetry-prometheus = "0.27"
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
tracing = "0.1"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic = "0.12"
# WebAssembly runtime dependencies
wasmtime = "28.0"
filetime = "0.2"
wasmtime-wasi = "28.0"
wasm-bindgen = "0.2"
# Additional security dependencies
cap-std = "3.4"
sha2 = "0.10"
prometheus = "0.14.0"
# Type generation
specta = { version = "2.0.0-rc.21", features = ["serde", "chrono", "uuid", "serde_json"] }
specta-typescript = { version = "0.0.9" }
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

# Merged with the earlier dev-dependencies section

[package.metadata.bundle]
name = "Timeline Studio"
identifier = "com.chatman-media.timeline-studio"

[package.metadata.tauri]
# Info.plist customizations for macOS
macos_info_plist_additions = """
<key>NSCameraUsageDescription</key>
<string>Timeline Studio needs access to your camera to record video</string>
<key>NSMicrophoneUsageDescription</key>
<string>Timeline Studio needs access to your microphone to record audio</string>
<key>NSPhotoLibraryUsageDescription</key>
<string>Timeline Studio needs access to your photo library to import media</string>
<key>NSPhotoLibraryAddUsageDescription</key>
<string>Timeline Studio needs permission to save videos to your photo library</string>
"""

# Benchmarks commented out temporarily to fix compilation warnings
# [[bench]]
# name = "ffmpeg_benchmarks"
# harness = false
# path = "src/video_compiler/benchmarks/ffmpeg_benchmarks.rs"

[workspace]
resolver = "2"
